# gdal-utils

crop-to-valid-extent/: CMakeLists.txt  README.md  Region.cpp  Region.h  ValidRegion-impl.cpp  ValidRegion.cpp  ValidRegion.h  main.cpp  main_byte.cpp
random-points-inside-polygon/: CMakeLists.txt  README.md
random-points-inside-polygon/apps/: CMakeLists.txt  generate_random_points.cpp
random-points-inside-polygon/source/: roi.cpp  roi.h
